# Matematica-Computacional

./: README.md  pyproject.toml
atividades/: Atividade-AVA-1.ipynb  Trabalho-0.ipynb  Trabalho-1.ipynb  Trabalho-2.ipynb  Trabalho-2_1.ipynb
atividades/Atividade-2_2/: Trabalho-2_2.ipynb
