[project]
name = "Matematica-Computacional"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
  "pandas>=2.0.0"
]


[bild-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[tool.pyright]
typeCheckingMode = "standar"

exclude = [
  "**/__pycache__",
  ".venv"
]
